# FINESE_2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINESE2.py  GITHUB_PAGES_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  README_FASTAPI.md  access_layer.py  app.py  config.py  consolidated_architecture.md  data_all1_mlops.db  data_store.py  deploy_hf.sh  docker-compose.yml  improvements.md  logging_config.py  main.py  pyproject.toml  requirements.txt  requirements_legacy.txt  setup.cfg  space.yaml  state.py  test_architecture.py  test_imports.py  theme.py
.streamlit/: config.toml
app/: __init__.py  config.py  extensions.py
backend/: Dockerfile  main.py  requirements.txt
core/: __init__.py  dataset_context.py  dataset_store.py  experiment_tracker.py  model_registry.py
dashboard/: __init__.py  app.py
docs/: deployment.md  getting-started.md  index.md
engine/: __init__.py  ai_assistant.py  analyzer.py  cleaner.py  data_manager.py  eda_engine.py  ml_modeler.py  mlops_tracker.py  report_generator.py  visualizer.py
frontend/: Dockerfile  nginx.conf  package.json
models/: registry.json
modules/: ai_assistant.py  analyzer.py  cleaner.py  data_manager.py  eda_engine.py  ml_modeler.py  mlops_tracker.py  report_generator.py  visualizer.py
pages/: 01_Data.py  02_EDA.py  03_Cleaning.py  04_Visualization.py  05_Analysis.py  06_Modeling.py  07_MLOps.py  08_Reports.py  09_AI_Assistant.py
routes/: __init__.py  charts.py  chatbot.py  cleaning.py  data.py  export.py  ml.py  mlops.py  review.py  sql.py
services/: __init__.py  chart_service.py  cleaning_service.py  health_service.py  llm_service.py  ml_service.py  profiling_service.py  sql_service.py
tabs/: __init__.py  charts.py  chatbot.py  cleaning.py  export.py  make_a_model.py  review.py  sql_query.py
(+130 files in other folders)
